# midi-looper

./: .gitmodules  Cargo.toml  memory.x  openocd.gdb  openocd_program.sh
.cargo/: config
src/: clock.rs  loop_buffer.rs  main.rs
