[package]
name = "midi-looper"
version = "0.1.0"
authors = ["David Stalnaker <david.stalnaker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-itm = "0.4.2"
nb = "1.0.0"
heapless = "0.5.5"
cortex-m-rtic = "0.5.3"
embedded-midi = "0.0.2"

[dependencies.stm32f4xx-hal]
version = "0.8.3"
features = ["rt", "stm32f407"]
